# Customer-Support-VC-Agent

./: README.md  agent.py  knowledge_base.txt  pyproject.toml
app/: config.py  dummy_apis.py  main.py  rag.py  state_machine.py  tools.py
